crates/elasticctl-cli/tests/snapshots/snapshots_render__rules_list_fields.snap
---
source: crates/elasticctl-cli/tests/snapshots_render.rs
expression: rendered
---
rule_id              name                 
elasticctl-sample-a  elasticctl sample A  
elasticctl-sample-b  elasticctl sample B
